--- a/Project_Code/project/Objects/uC.build_log.htm
+++ b/Project_Code/project/Objects/uC.build_log.htm
@@ -21,19 +21,82 @@ Target DLL:      Segger\JL2CM3.dll V2.99.13.0
 Dialog DLL:      TCM.DLL V1.14.4.0
  
 <h2>Project:</h2>
-E:\KeilWorkspace\M3\SmartLed_c8t6\project\uC.uvprojx
+E:\git\SmartLED_for_c8t6\Project_Code\project\uC.uvprojx
 Project File Date:  06/24/2019
 
 <h2>Output:</h2>
-Build target 'uC'
+Rebuild target 'uC'
+compiling app_led.c...
 compiling uC.c...
+compiling app_comm.c...
+compiling app_files.c...
+compiling app_wifi.c...
+compiling osal.c...
+compiling hal.c...
+compiling hal_int.c...
+compiling hal_led.c...
+compiling hal_timer.c...
+compiling hal_uart.c...
+compiling hal_wdg.c...
+compiling hal_rtc.c...
+compiling hal_sd.c...
+compiling hal_key.c...
+compiling srv_comm.c...
+compiling srv_comm_check.c...
+compiling srv_wifi_comm.c...
+compiling srv_queue.c...
+compiling gizwits_product.c...
+compiling gizwits_protocol.c...
+..\ServicesLayer\Gizwits\gizwits_protocol.c(157): warning:  #550-D: variable "lastReportTime" was set but never used
+      static uint32_t lastReportTime = 0;
+..\ServicesLayer\Gizwits\gizwits_protocol.c(158): warning:  #550-D: variable "currentTime" was set but never used
+      uint32_t currentTime = 0;
+..\ServicesLayer\Gizwits\gizwits_protocol.c: 2 warnings, 0 errors
+compiling common.c...
+compiling dataPointTools.c...
+compiling ringbuffer.c...
+compiling core_cm3.c...
+compiling drv_dwt.c...
+compiling drv_gpio.c...
+compiling drv_int.c...
+compiling drv_timer.c...
+compiling drv_uart.c...
+compiling system_stm32f10x.c...
+compiling drv_wdg.c...
+compiling drv_sd.c...
+compiling drv_spi.c...
+compiling drv_rtc.c...
+assembling startup_stm32f10x_md.s...
+compiling misc.c...
+compiling stm32f10x_adc.c...
+compiling stm32f10x_bkp.c...
+compiling stm32f10x_can.c...
+compiling stm32f10x_cec.c...
+compiling stm32f10x_crc.c...
+compiling stm32f10x_dac.c...
+compiling stm32f10x_dbgmcu.c...
+compiling stm32f10x_dma.c...
+compiling stm32f10x_exti.c...
+compiling stm32f10x_flash.c...
+compiling stm32f10x_fsmc.c...
+compiling stm32f10x_gpio.c...
+compiling stm32f10x_i2c.c...
+compiling stm32f10x_iwdg.c...
+compiling stm32f10x_pwr.c...
+compiling stm32f10x_rcc.c...
+compiling stm32f10x_rtc.c...
+compiling stm32f10x_sdio.c...
+compiling stm32f10x_spi.c...
+compiling stm32f10x_tim.c...
+compiling stm32f10x_usart.c...
+compiling stm32f10x_wwdg.c...
 linking...
-Program Size: Code=12272 RO-data=504 RW-data=112 ZI-data=2416  
+Program Size: Code=15124 RO-data=504 RW-data=108 ZI-data=2420  
 FromELF: creating hex file...
-".\Objects\uC.axf" - 0 Error(s), 0 Warning(s).
+".\Objects\uC.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
-  E:\KeilWorkspace\M3\SmartLed_c8t6\project\RTE
+  E:\git\SmartLED_for_c8t6\Project_Code\project\RTE
   D:\Keil_v5\ARM\PACK\Keil\STM32F1xx_DFP\2.1.0
 
 <h2>Collection of Component Files used:</h2>
