--- a/Project_Code/project/Objects/uC.build_log.htm
+++ b/Project_Code/project/Objects/uC.build_log.htm
@@ -26,6 +26,12 @@ Project File Date:  06/27/2019
 
 <h2>Output:</h2>
 Build target 'uC'
+compiling app_led.c...
+compiling uC.c...
+compiling app_wifi.c...
+linking...
+Program Size: Code=16716 RO-data=504 RW-data=116 ZI-data=2572  
+FromELF: creating hex file...
 ".\Objects\uC.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
