--- a/01_Project_Code/0101_SmartLed/project/Objects/uC.build_log.htm
+++ b/01_Project_Code/0101_SmartLed/project/Objects/uC.build_log.htm
@@ -26,9 +26,9 @@ Project File Date:  07/11/2019
 
 <h2>Output:</h2>
 Build target 'uC'
-compiling app_led_ctrl.c...
+compiling app_shock.c...
 linking...
-Program Size: Code=19512 RO-data=848 RW-data=140 ZI-data=3492  
+Program Size: Code=19668 RO-data=848 RW-data=144 ZI-data=3488  
 FromELF: creating hex file...
 ".\Objects\uC.axf" - 0 Error(s), 0 Warning(s).
 
