--- a/01_Project_Code/0102_RGBLed/project/Objects/uC.build_log.htm
+++ b/01_Project_Code/0102_RGBLed/project/Objects/uC.build_log.htm
@@ -26,7 +26,8 @@ Project File Date:  07/11/2019
 
 <h2>Output:</h2>
 Build target 'uC'
-compiling gizwits_product.c...
+compiling uC.c...
+compiling app_wifi.c...
 linking...
 Program Size: Code=20528 RO-data=848 RW-data=168 ZI-data=3560  
 FromELF: creating hex file...
