--- a/01_Project_Code/0102_RGBLed/project/Objects/uC.build_log.htm
+++ b/01_Project_Code/0102_RGBLed/project/Objects/uC.build_log.htm
@@ -26,6 +26,10 @@ Project File Date:  07/11/2019
 
 <h2>Output:</h2>
 Build target 'uC'
+compiling app_led_ctrl.c...
+linking...
+Program Size: Code=20688 RO-data=848 RW-data=168 ZI-data=3560  
+FromELF: creating hex file...
 ".\Objects\uC.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
