--- a/01_Project_Code/0101_SmartLed/project/Objects/uC.build_log.htm
+++ b/01_Project_Code/0101_SmartLed/project/Objects/uC.build_log.htm
@@ -26,6 +26,9 @@ Project File Date:  07/11/2019
 
 <h2>Output:</h2>
 Build target 'uC'
+linking...
+Program Size: Code=19676 RO-data=848 RW-data=144 ZI-data=3488  
+FromELF: creating hex file...
 ".\Objects\uC.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
